--- a/Qwen/start.ipynb
+++ b/Qwen/start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "# 假设这是你的请求 URL\n",
+    "# 请求 URL\n",
     "url = 'http://localhost:5000/predict'\n",
     "\n",
     "# 图片文件路径\n",
@@ -33,7 +33,6 @@
     "    result_dict = response.json()\n",
     "    result_text = result_dict.get('result')\n",
     "\n",
-    "    # 拆分出问题和答案部分\n",
     "    if result_text:\n",
     "        answer = result_text[0]\n",
     "        print(f\"Question: {data['prompt']}\")\n",
