--- a/LLaVA/start.ipynb
+++ b/LLaVA/start.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "# 假设这是你的请求 URL\n",
+    "# 请求 URL\n",
     "url = 'http://localhost:5000/predict'\n",
     "\n",
     "# 图片文件路径\n",
@@ -33,7 +33,6 @@
     "    result_dict = response.json()\n",
     "    result_text = result_dict.get('result')\n",
     "\n",
-    "    # 拆分出问题和答案部分\n",
     "    if result_text:\n",
     "        parts = result_text.split('ASSISTANT:')\n",
     "        if len(parts) == 2:\n",
